@startuml
'https://plantuml.com/sequence-diagram

class VaccinationCenter {
-name
-addres
-phone number
-e-mail addres
-fax number
-website addres
-opening hours
-closing hours
-slot duration
-maximum number of vaccines
-coordinator
}
class Nurse
class Organization
class CenterCoordinator
class Vaccine {
-name
-brand
-type
-age groups
-vaccines per age group
-dosage
-time interval regarding previous vaccine administered
}
class WaitingRoom
class VaccinationCenterReceptionist





WaitingRoom -- VaccinationCenter : from >
Nurse -- VaccinationCenter : works for >
CenterCoordinator -- VaccinationCenter : creates relatories of >
Organization -d- VaccinationCenter : owns >
CenterCoordinator -u- Organization : works for >
VaccinationCenter -- Vaccine : contains >
VaccinationCenterReceptionist -- VaccinationCenter : works for >
class Administrator
Administrator -- Organization : works for >
Administrator -- Vaccine : can specify new >
VaccinationCenterReceptionist -- WaitingRoom : send patient to >




@enduml
